...
            "value" : "Weiter"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Proceed"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Procéder"
...
            "value" : "Passwort"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Password"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Mot de passe"
...
            "value" : "Benutzername"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Username"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nom d'utilisateur"
...
